# fabro

./: .env  .env.example  .gitignore  00_START_HERE.txt  AGENTS.md  ASTROPY_FIX_README.md  BEFORE_AFTER_COMPARISON.md  COMPLETION_CHECKLIST.md  Cargo.toml  DELIVERABLES.md  DJANGO_AUTORELOADER_FIX_README.md  DJANGO_AUTORELOADER_INDEX.md  DJANGO_ISSUE_30179_FIX.md  DJANGO_ISSUE_FIX.md  Dockerfile  FIX_SUMMARY.md  IMPLEMENTATION_GUIDE.md  INDEX.txt  ISSUE_RESOLUTION_SUMMARY.md  PATCH.diff  README.md  README_FIX.md  SOLUTION.md  SUMMARY.txt  TECHNICAL_ANALYSIS.md  arc.toml  astropy_nddata_mixins_ndarithmetic.py  checkpoint.json  docker-compose.demo.yaml  fabro.toml  flake.nix  graph.fabro  hello.txt  install.sh  manifest.json  rust-toolchain.toml  sandbox.json  test_ndarithmetic.py  test_password_reset_fix.py  test_separability.py
.github/workflows/: release.yml  rust.yml
Django.egg-info/: PKG-INFO  SOURCES.txt
apps/fabro-web/: package-lock.json
apps/marketing/: astro.config.mjs  vercel.json
crates/agent/: Cargo.toml
crates/arc-api/: Cargo.toml
crates/arc-cli/: Cargo.toml
crates/arc-cli/src/: cli_config.rs  doctor.rs  logging.rs  main.rs
crates/arc-cli/tests/: cli.rs
crates/arc-devcontainer/: DEVCONTAINER-COMPATIBILITY.md
crates/arc-exe/: Cargo.toml
crates/arc-exe/src/: lib.rs
crates/arc-workflows/: Cargo.toml
crates/mcp/: Cargo.toml
crates/unified-llm/: Cargo.toml
crates/unified-llm-cli/: Cargo.toml
crates/unified-llm-cli/src/: main.rs
django/conf/: global_settings.py
docker/: Dockerfile  Dockerfile.agent  docker-compose.yaml  entrypoint.ts
docs/: docs.json
docs/administration/: security.mdx  server-configuration.mdx
docs/agents/: hooks.mdx  mcp.mdx  outputs.mdx  prompts.mdx  skills.mdx  subagents.mdx  tools.mdx
docs/api-reference/: arc-api.yaml  client-sdks.mdx  fabro-api.yaml  overview.mdx
docs/changelog/: 2026-02-23.mdx  2026-02-24.mdx  2026-02-25.mdx  2026-02-26.mdx  2026-02-27.mdx  2026-02-28.mdx  2026-03-01.mdx  2026-03-02.mdx  2026-03-03.mdx  2026-03-04.mdx  2026-03-05.mdx  2026-03-06.mdx  2026-03-07.mdx  2026-03-08.mdx  2026-03-09.mdx  2026-03-10.mdx  2026-03-12.mdx
docs/core-concepts/: agents.mdx  how-fabro-works.mdx  models.mdx  server-mode.mdx  workflows.mdx
docs/examples/: nlspec-convergence.mdx  semantic-port.mdx  solitaire.mdx
docs/execution/: checkpoints.mdx  context.mdx  environments.mdx  failures.mdx  interviews.mdx  observability.mdx  retros.mdx  run-configuration.mdx
docs/getting-started/: comparison.mdx  dark-factory.mdx  introduction.mdx  quick-start.mdx  why-arc.mdx  why-fabro.mdx
docs/human-tools/: ssh-access.mdx  steering.mdx  vs-code.mdx
docs/integrations/: brave-search.mdx  daytona.mdx  github.mdx  slack.mdx
docs/reference/: acknowledgements.mdx  architecture.mdx  cli-configuration.mdx  cli.mdx  dot-language.mdx  logs-directory.mdx
docs/specs/: agent-cli-spec.md
docs/tutorials/: branch-loop.mdx  ensemble.mdx  hello-world.mdx  multi-model.mdx  parallel-review.mdx  plan-implement.mdx  sub-workflow.mdx
docs/workflows/: human-in-the-loop.mdx  stages-and-nodes.mdx  stylesheets.mdx  transitions.mdx  variables.mdx
evals/swe-bench/: evaluate.py  evaluate_daytona.py  gen_dockerfile.py  requirements.txt  run_eval.py  workflow.fabro
files-internal/: events-strategy.md
files-internal/demo/: 14-search-imagegen.toml
lib/crates/arc-ssh/: Cargo.toml
lib/crates/arc-ssh/src/: lib.rs
lib/crates/fabro-config/: Cargo.toml
lib/crates/fabro-config/src/: cli.rs  lib.rs  project.rs  run.rs  sandbox.rs  server.rs
lib/crates/fabro-exe/: Cargo.toml
lib/crates/fabro-exe/src/: lib.rs  openssh_runner.rs
lib/crates/fabro-exe/tests/: integration.rs
lib/crates/fabro-github/: Cargo.toml
lib/crates/fabro-github/src/: lib.rs
lib/crates/fabro-linear/: Cargo.toml
lib/crates/fabro-linear/src/: lib.rs
lib/crates/fabro-tui/: Cargo.toml
lib/crates/fabro-tui/src/: event_loop.rs  interviewer.rs  lib.rs  theme.rs
lib/crates/fabro-tui/src/components/: agent_panel.rs  app.rs  chat_view.rs  mod.rs  status_bar.rs  workflow_panel.rs
lib/crates/fabro-tui/src/source/: live.rs
lib/crates/fabro-tui/src/state/: chat_state.rs  mod.rs  run_state.rs
lib/crates/fabro-workflows/: Cargo.toml  README.md
lib/crates/fabro-workflows/src/: artifact.rs  asset_snapshot.rs  assets.rs  checkpoint.rs  conclusion.rs  condition.rs  cost.rs  daytona_sandbox.rs  devcontainer_bridge.rs  engine.rs  error.rs  event.rs  git.rs  graph_render.rs  lib.rs  manifest.rs  outcome.rs  preamble.rs  pull_request.rs  retro.rs  retro_agent.rs  run_fork.rs  run_lookup.rs  run_rewind.rs  run_status.rs  sandbox_provider.rs  sandbox_reconnect.rs  sandbox_record.rs  stylesheet.rs  transform.rs  vars.rs  workflow.rs
lib/crates/fabro-workflows/src/backend/: api.rs  ask_human.rs  cli.rs  interactive_renderer.rs  mod.rs
lib/crates/fabro-workflows/src/cli/: backend.rs  cli_backend.rs  cp.rs  diff.rs  graph.rs  logs.rs  mod.rs  pr.rs  preview.rs  progress.rs  project_config.rs  rewind.rs  run.rs  run_config.rs  runs.rs  ssh.rs  validate.rs  workflow.rs
lib/crates/fabro-workflows/src/context/: mod.rs
lib/crates/fabro-workflows/src/graph/: types.rs
lib/crates/fabro-workflows/src/handler/: agent.rs  command.rs  conditional.rs  exit.rs  fan_in.rs  human.rs  manager_loop.rs  mod.rs  parallel.rs  prompt.rs  start.rs  wait.rs
lib/crates/fabro-workflows/src/hook/: bridge.rs  config.rs  executor.rs  mod.rs  runner.rs  types.rs
lib/crates/fabro-workflows/src/interviewer/: console.rs  queue.rs  recording.rs  replay.rs
lib/crates/fabro-workflows/src/parser/: lexer.rs  mod.rs  semantic.rs
lib/crates/fabro-workflows/src/validation/: mod.rs  rules.rs
lib/crates/fabro-workflows/tests/: attractor_compat.rs  cp_integration.rs  daytona_integration.rs  integration.rs
nodes/branch1/: prompt.md  response.md  (+1 more)
openapi/: arc-api.yaml
scripts/: generate-jwt-keys.sh  name-gen.ts
test/: django_autoreload.fabro
tmp/: Dockerfile.imagegen  imagegen-api.dot  imagegen-api.toml  implement-and-simplify.dot  implement-and-simplify.toml
tools/: imagegen
(+593 files in other folders)
