[package]
name = "unified-llm-cli"
description = "CLI for the unified-llm library"
edition.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "ullm"
path = "src/main.rs"

[dependencies]
unified-llm = { path = "../unified-llm" }
clap = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
