[package]
name = "arc-ssh"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Generic SSH sandbox for Arc agent tool operations"

[lib]
doctest = false

[dependencies]
arc-agent = { path = "../arc-agent" }
arc-github = { path = "../arc-github" }
async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true
openssh.workspace = true
serde_json.workspace = true
base64.workspace = true
tracing.workspace = true
serde.workspace = true
shlex = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
