[package]
name = "fabro-config"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Centralized configuration types for Fabro"

[lib]
doctest = false

[features]
default = []
exedev = ["fabro-workflows/exedev"]

[dependencies]
anyhow.workspace = true
fabro-agent = { path = "../fabro-agent" }
fabro-mcp = { path = "../fabro-mcp" }
fabro-workflows = { path = "../fabro-workflows" }
dirs.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
