[package]
name = "fabro-linear"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Linear issue tracker API helpers for Fabro"

[lib]
doctest = false

[dependencies]
fabro-tracker = { path = "../fabro-tracker" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true

[dev-dependencies]
mockito = "1"
tokio = { workspace = true, features = ["test-util", "macros"] }
