[package]
name = "fabro-tui"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Ratatui-based TUI for Fabro workflow runs"

[dependencies]
fabro-workflows = { path = "../fabro-workflows" }
fabro-agent = { path = "../fabro-agent" }
fabro-interview = { path = "../fabro-interview" }
fabro-util = { path = "../fabro-util" }
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
async-trait.workspace = true
indexmap.workspace = true
tracing.workspace = true
futures-util.workspace = true
scopeguard = "1"
